# VibeCodingFlow

./: CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
VibeCodingFlow/: cli.py  prompts.py
VibeCodingFlow/services/: architect.py  codegen.py  memory.py  openai_client.py  promptifier.py  updater.py
VibeCodingFlow/tests/: test_services.py
VibeCodingFlow/utils/: json_extract.py
